--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -9,7 +9,7 @@
     "#### ** This exercise will cover: **\n",
     "+  ####*Part 1:* Parse CTR data and generate OHE features\n",
     "+  ####*Part 2:* CTR prediction and logloss evaluation\n",
-    " + #### *Visualization 1:* ROC curve\n",
+    " + #### *Visualization:* ROC curve\n",
     " \n",
     "#### Note that, for reference, you can look up the details of the relevant Spark methods in [Spark's Python API](https://spark.apache.org/docs/latest/api/python/pyspark.html#pyspark.RDD) and the relevant NumPy methods in the [NumPy Reference](http://docs.scipy.org/doc/numpy/reference/index.html)"
    ]
@@ -67,11 +67,11 @@
    "outputs": [],
    "source": [
     "# TODO: Replace <FILL IN> with appropriate code\n",
-    "weights = [.8, .1, .1]\n",
+    "weights = [.6, .2, .2]\n",
     "seed = 42\n",
     "# Use randomSplit with weights and seed\n",
     "rawTrainData, rawValidationData, rawTestData = rawData.randomSplit(weights, seed)\n",
-    "# Cache the data\n",
+    "# Cache the data because we need to use these datasets later\n",
     "rawTrainData.cache()\n",
     "rawValidationData.cache()\n",
     "rawTestData.cache()\n",
@@ -88,7 +88,7 @@
    "metadata": {},
    "source": [
     "#### ** Creating ONE Dictionary**\n",
-    "#### Transforming the raw training data to an RDD containing a list of (featureID, value). We will ignore the first field (which is the 0-1 label), and parse the remaining fields (or raw features)."
+    "#### Generating a dictionary containing a list of \"distinct (featureID, value) : Unique Integer\" from the raw training data. We will ignore the first field (which is the 0-1 label), and parse the remaining fields (or raw features)."
    ]
   },
   {
@@ -99,6 +99,7 @@
    },
    "outputs": [],
    "source": [
+    "#Fist we should get a RDD containing a list of (featureID,value) from the training data\n",
     "# TODO: Replace <FILL IN> with appropriate code\n",
     "def parseData(data):\n",
     "    \"\"\"Converts a comma separated string into a list of (featureID, value) tuples.\n",
@@ -125,10 +126,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "#### Create an OHE dictionary from the RDD with the list of (featureID, value)"
+    "# Create an OHE dictionary from the RDD with the list of (featureID, value)\n",
+    "# generated in the previous function "
    ]
   },
   {
@@ -192,14 +198,14 @@
    },
    "outputs": [],
    "source": [
-    "# We have 233286 features totally\n"
+    "# We have 190509 features totally now"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ** Transform training data to RDD of LabeledPoint **"
+    "#### ** Transform training data to a RDD of LabeledPoint **"
    ]
   },
   {
@@ -228,12 +234,12 @@
     "\n",
     "    Note:\n",
     "        You should ensure that the indices used to create a SparseVector are sorted.\n",
-    "        Because some categorical values will likely appear in validation/Test data \n",
+    "        !Important!:Because some categorical values will likely appear in validation/Test data \n",
     "        that did not exist in the training data. \n",
     "        To deal with this situation, ignoring unseen categories in validation/test data\n",
     "\n",
     "    Args:\n",
-    "        rawFeats (list of (int, str)): The features corresponding to a single observation.  Each\n",
+    "        rawFeats (list of (int, str)): The features corresponding to a single observation.Each\n",
     "            feature consists of a tuple of featureID and the feature's value.\n",
     "        OHEDictionary: A mapping of (featureID, value) to unique integer.\n",
     "\n",
@@ -243,7 +249,8 @@
     "            with values equal to 1.0.\n",
     "    \"\"\"\n",
     "    return SparseVector(len(OHEDictionary),sorted([(OHEDictionary[x],1.0) for x in rawFeats if x in OHEDictionary]))\n",
-    "def createOHELabeledPoint(data, OHEDictionary, numOHEFeats):\n",
+    "\n",
+    "def getLabeledPoint(data, OHEDictionary, numOHEFeats):\n",
     "    \"\"\"Obtain the label and feature vector for this raw observation.\n",
     "\n",
     "    Note:\n",
@@ -265,15 +272,15 @@
     "    \n",
     "    return LabeledPoint(data[0],sparseVector)\n",
     "\n",
-    "OHETrainData = rawTrainData.map(lambda data: createOHELabeledPoint(data, OHEDictionary, numCtrOHEFeats))\n",
+    "OHETrainData = rawTrainData.map(lambda data: getLabeledPoint(data, OHEDictionary, numCtrOHEFeats))\n",
     "OHETrainData.cache()\n",
     "print OHETrainData.take(1)\n",
     "\n",
-    "OHEValidationData = rawValidationData.map(lambda data: createOHELabeledPoint(data, OHEDictionary, numCtrOHEFeats))\n",
+    "OHEValidationData = rawValidationData.map(lambda data: getLabeledPoint(data, OHEDictionary, numCtrOHEFeats))\n",
     "OHEValidationData.cache()\n",
     "print OHEValidationData.take(1)\n",
     "\n",
-    "OHETestData = rawValidationData.map(lambda data: createOHELabeledPoint(data, OHEDictionary, numCtrOHEFeats))\n",
+    "OHETestData = rawValidationData.map(lambda data: getLabeledPoint(data, OHEDictionary, numCtrOHEFeats))\n",
     "OHETestData.cache()\n",
     "print OHETestData.take(1)"
    ]
@@ -331,7 +338,7 @@
    "metadata": {},
    "source": [
     "#### ** Predicted probability **\n",
-    "#### In order to compute the log loss for the model we train, we need to write code to generate predictions from the model. Write a function that computes the raw linear prediction from this logistic regression model and then passes it through a [sigmoid function](http://en.wikipedia.org/wiki/Sigmoid_function) $ \\scriptsize \\sigma(t) = (1+ e^{-t})^{-1} $ to return the model's probabilistic prediction. Then compute probabilistic predictions on the training data."
+    "#### In order to compute the log loss for the model we train, we need to write code to generate predictions from the model. Write a function that computes the raw linear prediction (t = x.dot(w) + intercept) from this logistic regression model and then passes it through a [sigmoid function](http://en.wikipedia.org/wiki/Sigmoid_function) $ \\scriptsize \\sigma(t) = (1+ e^{-t})^{-1} $ to return the model's probabilistic prediction. Then compute probabilistic predictions on the training data."
    ]
   },
   {
@@ -355,7 +362,7 @@
     "        x (SparseVector): A vector with values of 1.0 for features that exist in this\n",
     "            observation and 0.0 otherwise.\n",
     "        w (DenseVector): A vector of weights (betas) for the model.\n",
-    "        intercept (float): The model's intercept.\n",
+    "        intercept (float): The model's bias.\n",
     "\n",
     "    Returns:\n",
     "        float: A probability between 0 and 1.\n",
@@ -375,7 +382,7 @@
    "metadata": {},
    "source": [
     "#### ** Evaluate the model **\n",
-    "#### To do this, write a general function that takes as input a model and data, and outputs the log loss. "
+    "#### Now we write a general function that takes as input a model and data, and outputs the log loss. "
    ]
   },
   {
@@ -387,7 +394,7 @@
    "outputs": [],
    "source": [
     "# TODO: Replace <FILL IN> with appropriate code\n",
-    "def evaluateResults(model, data):\n",
+    "def computeLogLossOfModel(model, data):\n",
     "    \"\"\"Calculates the log loss for the data given the model.\n",
     "\n",
     "    Args:\n",
@@ -398,11 +405,11 @@
     "        float: Log loss for the data.\n",
     "    \"\"\"\n",
     "    \n",
-    "    prob_lb_tup = data.map(lambda lp: (getProbability(lp.features, model.weights, model.intercept),lp.label))\n",
+    "    probability_lable_tuple = data.map(lambda lp: (getProbability(lp.features, model.weights, model.intercept),lp.label))\n",
     "    \n",
-    "    loss_tup = prob_lb_tup.map(lambda (x,y): computeLogLoss(x,y))\n",
+    "    loss = probability_lable_tuple.map(lambda (x,y): computeLogLoss(x,y))\n",
     "    \n",
-    "    return loss_tup.mean()"
+    "    return loss.mean()"
    ]
   },
   {
@@ -427,16 +434,17 @@
     "regType = 'l2'\n",
     "includeIntercept = True\n",
     "\n",
-    "# Initialize va\"riables using values from initial model training\n",
+    "# Initialize variables\n",
     "bestModel = None\n",
-    "bestLogLoss = 1e10"
+    "bestLogLoss = float('inf')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -448,7 +456,7 @@
     "        model = (LogisticRegressionWithSGD\n",
     "                 .train(OHETrainData, numIters, stepSize, regParam=regParam, regType=regType,\n",
     "                        intercept=includeIntercept))\n",
-    "        logLossVa = evaluateResults(model, OHEValidationData)\n",
+    "        logLossVa = computeLogLossOfModel(model, OHEValidationData)\n",
     "        print ('\\tstepSize = {0:.1f}, regParam = {1:.0e}: logloss = {2:.3f}'\n",
     "               .format(stepSize, regParam, logLossVa))\n",
     "        if (logLossVa < bestLogLoss):\n",
@@ -506,8 +514,8 @@
     "# Generate layout and plot data\n",
     "fig, ax = preparePlot(np.arange(0., 1.1, 0.1), np.arange(0., 1.1, 0.1))\n",
     "ax.set_xlim(-.05, 1.05), ax.set_ylim(-.05, 1.05)\n",
-    "ax.set_ylabel('True Positive Rate (Sensitivity)')\n",
-    "ax.set_xlabel('False Positive Rate (1 - Specificity)')\n",
+    "ax.set_ylabel('True Positive Rate')\n",
+    "ax.set_xlabel('False Positive Rate')\n",
     "plt.plot(falsePositiveRate, truePositiveRate, color='#8cbfd0', linestyle='-', linewidth=3.)\n",
     "plt.plot((0., 1.), (0., 1.), linestyle='--', color='#d6ebf2', linewidth=2.)  # Baseline model\n",
     "pass"
@@ -518,7 +526,7 @@
    "metadata": {},
    "source": [
     "#### ** (3e) Evaluate on the test set **\n",
-    "#### Finally, evaluate the best model on the test set."
+    "#### Finally, do the predictions with the best model on the test set."
    ]
   },
   {
@@ -530,21 +538,46 @@
    "outputs": [],
    "source": [
     "# TODO: Replace <FILL IN> with appropriate code\n",
-    "# Log loss for the best model from (5d)\n",
-    "logLossTest = evaluateResults(bestModel, OHETestData)\n",
-    "\n",
+    "# Log loss for the best model\n",
+    "logLossTest = computeLogLossOfModel(bestModel, OHETestData)\n",
     "print ('Test Dataset Log Loss:\\n\\tlogLossTest = {0:.3f}'\n",
-    "       .format(logLossTest))"
+    "       .format(logLossTest))\n",
+    "\n",
+    "sortedWeights = sorted(bestModel.weights)\n",
+    "print sortedWeights[:5], bestModel.intercept"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "labelsAndScores = OHETestData.map(lambda lp:\n",
+    "                                            (lp.label, getProbability(lp.features, bestModel.weights, bestModel.intercept)))\n",
+    "labelsAndWeights = labelsAndScores.collect()\n",
+    "labelsAndWeights.sort(key=lambda (k, v): v, reverse=True)\n",
+    "labelsByWeight = np.array([k for (k, v) in labelsAndWeights])\n",
+    "\n",
+    "length = labelsByWeight.size\n",
+    "truePositives = labelsByWeight.cumsum()\n",
+    "numPositive = truePositives[-1]\n",
+    "falsePositives = np.arange(1.0, length + 1, 1.) - truePositives\n",
+    "\n",
+    "truePositiveRate = truePositives / numPositive\n",
+    "falsePositiveRate = falsePositives / (length - numPositive)\n",
+    "\n",
+    "# Generate layout and plot data\n",
+    "fig, ax = preparePlot(np.arange(0., 1.1, 0.1), np.arange(0., 1.1, 0.1))\n",
+    "ax.set_xlim(-.05, 1.05), ax.set_ylim(-.05, 1.05)\n",
+    "ax.set_ylabel('True Positive Rate')\n",
+    "ax.set_xlabel('False Positive Rate')\n",
+    "plt.plot(falsePositiveRate, truePositiveRate, color='#8cbfd0', linestyle='-', linewidth=3.)\n",
+    "plt.plot((0., 1.), (0., 1.), linestyle='--', color='#d6ebf2', linewidth=2.)  # Baseline model\n",
+    "pass"
+   ]
   }
  ],
  "metadata": {
