--- a/LogisticRegression-Exercise.ipynb
+++ b/LogisticRegression-Exercise.ipynb
@@ -8,8 +8,7 @@
     "#### This exercise covers the steps for creating a click-through rate (CTR) prediction pipeline. \n",
     "#### ** This exercise will cover: **\n",
     "+  ####*Part 1:* Parse CTR data and generate OHE features\n",
-    "+  ####*Part 2:* CTR prediction and logloss evaluation\n",
-    " + #### *Visualization:* ROC curve\n",
+    "+  ####*Part 2:* Training with LogisticRegression and logloss evaluation\n",
     " \n",
     "#### Note that, for reference, you can look up the details of the relevant Spark methods in [Spark's Python API](https://spark.apache.org/docs/latest/api/python/pyspark.html#pyspark.RDD) and the relevant NumPy methods in the [NumPy Reference](http://docs.scipy.org/doc/numpy/reference/index.html)"
    ]
@@ -25,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Data loading**"
+    "#### **Data loading and visualizing the raw data**"
    ]
   },
   {
@@ -67,14 +66,14 @@
    "outputs": [],
    "source": [
     "# TODO: Replace <FILL IN> with appropriate code\n",
-    "weights = [.6, .2, .2]\n",
-    "seed = 42\n",
+    "weights = [.8, .1, .1]\n",
+    "seed = None\n",
     "# Use randomSplit with weights and seed\n",
     "rawTrainData, rawValidationData, rawTestData = <FILL IN>\n",
     "# Cache the data because we need to use these datasets later\n",
-    "rawTrainData.<FILL IN>\n",
-    "rawValidationData.<FILL IN>\n",
-    "rawTestData.<FILL IN>\n",
+    "<FILL IN>\n",
+    "<FILL IN>\n",
+    "<FILL IN>\n",
     "\n",
     "nTrain = <FILL IN>\n",
     "nVal = <FILL IN>\n",
@@ -99,7 +98,7 @@
    },
    "outputs": [],
    "source": [
-    "#Fist we should get a RDD containing a list of (featureID,value) from the training data\n",
+    "#Fist we should get a RDD containing a list of (featureID,value) from the raw training data\n",
     "# TODO: Replace <FILL IN> with appropriate code\n",
     "def parseData(data):\n",
     "    \"\"\"Converts a comma separated string into a list of (featureID, value) tuples.\n",
@@ -121,7 +120,7 @@
     "    \n",
     "    return fv_tuple\n",
     "    \n",
-    "parsedTrainFeat = <FILL IN>\n",
+    "parsedTrainFeat = rawTrainData.map(parseData)\n",
     "print parsedTrainFeat.take(1)"
    ]
   },
@@ -183,27 +182,17 @@
     "    OHEDictionary = <FILL IN>\n",
     "    \n",
     "    return OHEDictionary\n",
-    "OHEDictionary = <FILL IN>\n",
+    "\n",
+    "OHEDictionary = createOneHotDictionary(parsedTrainFeat)\n",
     "numCtrOHEFeats = len(OHEDictionary.keys())\n",
     "print numCtrOHEFeats"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# We have 190509 features totally now"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ** Transform training data to a RDD of LabeledPoint **"
+    "#### ** Extracting the features using OHE dictionary and Transforming training/validation/test data to a RDD of LabeledPoint **"
    ]
   },
   {
@@ -227,7 +216,7 @@
    "outputs": [],
    "source": [
     "# TODO: Replace <FILL IN> with appropriate code\n",
-    "def oneHotEncoding(rawFeats, OHEDictionary):\n",
+    "def oneHotEncoding(parsedFeats, OHEDictionary):\n",
     "    \"\"\"Produce a 1-of-k encoding from a list of features and an 1-of-k dictionary.\n",
     "\n",
     "    Note:\n",
@@ -237,7 +226,7 @@
     "        To deal with this situation, ignoring unseen categories in validation/test data\n",
     "\n",
     "    Args:\n",
-    "        rawFeats (list of (int, str)): The features corresponding to a single observation.Each\n",
+    "        parsedFeats (list of (int, str)): The features corresponding to a single observation.Each\n",
     "            feature consists of a tuple of featureID and the feature's value.\n",
     "        OHEDictionary: A mapping of (featureID, value) to unique integer.\n",
     "\n",
@@ -248,7 +237,7 @@
     "    \"\"\"\n",
     "    return <FILL IN>\n",
     "\n",
-    "def getLabeledPoint(data, OHEDictionary, numOHEFeats):\n",
+    "def getLabeledPoint(data, OHEDictionary):\n",
     "    \"\"\"Obtain the label and feature vector for this raw observation.\n",
     "\n",
     "    Note:\n",
@@ -257,7 +246,6 @@
     "        data (str): A comma separated string where the first value is the label and the rest\n",
     "            are features.\n",
     "        OHEDictionary (dictionary of (int, str) to int): Mapping of (featureID, value) to unique integer.\n",
-    "        numOHEFeats (int): The number of unique features in the training dataset.\n",
     "\n",
     "    Returns:\n",
     "        LabeledPoint: Contains the label for the observation and the one-hot-encoding of the\n",
@@ -270,15 +258,15 @@
     "    \n",
     "    return <FILL IN>\n",
     "\n",
-    "OHETrainData = rawTrainData.map(lambda data: getLabeledPoint(data, OHEDictionary, numCtrOHEFeats))\n",
+    "OHETrainData = rawTrainData.map(lambda data: getLabeledPoint(data, OHEDictionary))\n",
     "OHETrainData.cache()\n",
     "print OHETrainData.take(1)\n",
     "\n",
-    "OHEValidationData = rawValidationData.map(lambda data: getLabeledPoint(data, OHEDictionary, numCtrOHEFeats))\n",
+    "OHEValidationData = rawValidationData.map(lambda data: getLabeledPoint(data, OHEDictionary))\n",
     "OHEValidationData.cache()\n",
     "print OHEValidationData.take(1)\n",
     "\n",
-    "OHETestData = rawValidationData.map(lambda data: getLabeledPoint(data, OHEDictionary, numCtrOHEFeats))\n",
+    "OHETestData = rawValidationData.map(lambda data: getLabeledPoint(data, OHEDictionary))\n",
     "OHETestData.cache()\n",
     "print OHETestData.take(1)"
    ]
@@ -403,7 +391,7 @@
     "        float: Log loss for the data.\n",
     "    \"\"\"\n",
     "    \n",
-    "    probability_lable_tuple = <FILL IN>\n",
+    "    probability_label_tuple = <FILL IN>\n",
     "    \n",
     "    loss = <FILL IN>\n",
     "    \n",
@@ -452,20 +440,21 @@
     "for stepSize in stepSizes:\n",
     "    for regParam in regParams:\n",
     "        model = <FILL IN>\n",
-    "        logLossVa = <FILL IN>\n",
+    "        #calculate the log loss on validation dataset using the trained model\n",
+    "        logLossValidation = <FILL IN>\n",
     "        print ('\\tstepSize = {0:.1f}, regParam = {1:.0e}: logloss = {2:.3f}'\n",
     "               .format(stepSize, regParam, logLossVa))\n",
-    "        if (logLossVa < bestLogLoss):\n",
-    "            bestModel = <FILL IN>\n",
-    "            bestLogLoss = <FILL IN>"
+    "        if (logLossValidation < bestLogLoss):\n",
+    "            bestModel = model\n",
+    "            bestLogLoss = logLossVa"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Visualization: ROC curve **\n",
-    "#### Graphical plot that illustrates the performance of a binary classifier system as its discrimination threshold is varied"
+    "#### ** Evaluate on the test set **\n",
+    "#### Finally, do the predictions with the best model on the test set and calcule the accuracy of prediction."
    ]
   },
   {
@@ -476,68 +465,21 @@
    },
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "labelsAndScores = OHEValidationData.map(lambda lp:\n",
-    "                                            (lp.label, getProbability(lp.features, bestModel.weights, bestModel.intercept)))\n",
-    "labelsAndWeights = labelsAndScores.collect()\n",
-    "labelsAndWeights.sort(key=lambda (k, v): v, reverse=True)\n",
-    "labelsByWeight = np.array([k for (k, v) in labelsAndWeights])\n",
-    "\n",
-    "length = labelsByWeight.size\n",
-    "truePositives = labelsByWeight.cumsum()\n",
-    "numPositive = truePositives[-1]\n",
-    "falsePositives = np.arange(1.0, length + 1, 1.) - truePositives\n",
-    "\n",
-    "truePositiveRate = truePositives / numPositive\n",
-    "falsePositiveRate = falsePositives / (length - numPositive)\n",
-    "\n",
-    "def preparePlot(xticks, yticks, figsize=(10.5, 6), hideLabels=False, gridColor='#999999',\n",
-    "                gridWidth=1.0):\n",
-    "    \"\"\"Template for generating the plot layout.\"\"\"\n",
-    "    plt.close()\n",
-    "    fig, ax = plt.subplots(figsize=figsize, facecolor='white', edgecolor='white')\n",
-    "    ax.axes.tick_params(labelcolor='#999999', labelsize='10')\n",
-    "    for axis, ticks in [(ax.get_xaxis(), xticks), (ax.get_yaxis(), yticks)]:\n",
-    "        axis.set_ticks_position('none')\n",
-    "        axis.set_ticks(ticks)\n",
-    "        axis.label.set_color('#999999')\n",
-    "        if hideLabels: axis.set_ticklabels([])\n",
-    "    plt.grid(color=gridColor, linewidth=gridWidth, linestyle='-')\n",
-    "    map(lambda position: ax.spines[position].set_visible(False), ['bottom', 'top', 'left', 'right'])\n",
-    "    return fig, ax\n",
-    "\n",
-    "# Generate layout and plot data\n",
-    "fig, ax = preparePlot(np.arange(0., 1.1, 0.1), np.arange(0., 1.1, 0.1))\n",
-    "ax.set_xlim(-.05, 1.05), ax.set_ylim(-.05, 1.05)\n",
-    "ax.set_ylabel('True Positive Rate')\n",
-    "ax.set_xlabel('False Positive Rate')\n",
-    "plt.plot(falsePositiveRate, truePositiveRate, color='#8cbfd0', linestyle='-', linewidth=3.)\n",
-    "plt.plot((0., 1.), (0., 1.), linestyle='--', color='#d6ebf2', linewidth=2.)  # Baseline model\n",
-    "pass"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### ** (3e) Evaluate on the test set **\n",
-    "#### Finally, do the predictions with the best model on the test set."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "#from pyspark.mllib.evaluation import BinaryClassificationMetrics from spark 1.4\n",
     "# TODO: Replace <FILL IN> with appropriate code\n",
-    "# Log loss for the best model on the test dataset\n",
-    "logLossTest = <FILL IN>\n",
-    "print ('Test Dataset Log Loss:\\n\\tlogLossTest = {0:.3f}'\n",
-    "       .format(logLossTest))\n",
+    "\n",
+    "# doing the prediction on the test dataset using the best model\n",
+    "predictionAndLabel = <FILL IN>\n",
+    "print predictionAndLabel.take(1)\n",
+    "\n",
+    "# calculate the accuracy of the predicton of the best model in this exercise\n",
+    "accuracy = <FILL IN>\n",
+    "print ('The accuracy on Test Dataset with the best model:\\n\\taccuracy = {0:.3f}'\n",
+    "       .format(accuracy))\n",
+    "\n",
+    "#from spark 1.4\n",
+    "#metrics = BinaryClassificationMetrics(predictionAndLabel) \n",
+    "#print metrics.areaUnderROC()\n",
     "\n",
     "sortedWeights = sorted(bestModel.weights)\n",
     "print sortedWeights[:5], bestModel.intercept"
@@ -547,32 +489,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "labelsAndScores = OHETestData.map(lambda lp:\n",
-    "                                            (lp.label, getProbability(lp.features, bestModel.weights, bestModel.intercept)))\n",
-    "labelsAndWeights = labelsAndScores.collect()\n",
-    "labelsAndWeights.sort(key=lambda (k, v): v, reverse=True)\n",
-    "labelsByWeight = np.array([k for (k, v) in labelsAndWeights])\n",
-    "\n",
-    "length = labelsByWeight.size\n",
-    "truePositives = labelsByWeight.cumsum()\n",
-    "numPositive = truePositives[-1]\n",
-    "falsePositives = np.arange(1.0, length + 1, 1.) - truePositives\n",
-    "\n",
-    "truePositiveRate = truePositives / numPositive\n",
-    "falsePositiveRate = falsePositives / (length - numPositive)\n",
-    "\n",
-    "# Generate layout and plot data\n",
-    "fig, ax = preparePlot(np.arange(0., 1.1, 0.1), np.arange(0., 1.1, 0.1))\n",
-    "ax.set_xlim(-.05, 1.05), ax.set_ylim(-.05, 1.05)\n",
-    "ax.set_ylabel('True Positive Rate')\n",
-    "ax.set_xlabel('False Positive Rate')\n",
-    "plt.plot(falsePositiveRate, truePositiveRate, color='#8cbfd0', linestyle='-', linewidth=3.)\n",
-    "plt.plot((0., 1.), (0., 1.), linestyle='--', color='#d6ebf2', linewidth=2.)  # Baseline model\n",
-    "pass"
+    "# You can go further using the hashing features for this exercise. Good Luck"
    ]
   }
  ],
