--- a/LogisticRegression-Exercise.ipynb
+++ b/LogisticRegression-Exercise.ipynb
@@ -403,7 +403,7 @@
    "metadata": {},
    "source": [
     "#### ** Traning the model with Logistic regression **\n",
-    "####  First use [LogisticRegressionWithSGD](https://spark.apache.org/docs/latest/api/python/pyspark.mllib.html#pyspark.mllib.classification.LogisticRegressionWithSGD) to train serveral models using `OHETrainData` with the given differente hyperparameter configuration. Getting the best model finally"
+    "####  First use [LogisticRegressionWithSGD](https://spark.apache.org/docs/latest/api/python/pyspark.mllib.html#pyspark.mllib.classification.LogisticRegressionWithSGD) to train serveral models using `OHETrainData` with the given differente hyperparameter configuration. Getting the best model using validation dataset by calculating Log Loss with the parameters of every model"
    ]
   },
   {
